--- a/views/login.pug
+++ b/views/login.pug
@@ -22,12 +22,12 @@ block content
                                         label.form-label(for='form2Example11')
                                             i.fas.fa-user.me-2
                                             | E-mail cím
-                                        input(type="email", name="email", placeholder="pl.: pelda@janos.com", required="ture").form-control.rounded.mb-3
+                                        input(type="email", name="email", placeholder="pl.: pelda@janos.com", required="ture" value="teszt@teszt.teszt").form-control.rounded.mb-3
 
                                         label.form-label(for='form2Example22')
                                             i.fa.fa-lock.me-2
                                             | Jelszó
-                                        input(type="password", name="password", placeholder="*******", required="ture").form-control.rounded.mb-3
+                                        input(type="password", name="password", placeholder="*******", required="ture" value="asdasd").form-control.rounded.mb-3
                                         br
                                         a(href="/register").small Még nincs fiókod?
                                         br
