--- a/views/event_create.pug
+++ b/views/event_create.pug
@@ -25,6 +25,10 @@ block content
                     input(type="text", name="place", placeholder="Az esemény helyszine", required="ture", value="").form-control
 
                     br
+                    label(for="date1") Az esemény helyszine:
+                    input(type="text", name="date1", placeholder="Az esemény dátuma", required="ture", value="").form-control
+
+                    br
                     input(type="submit", name="submit" value="Meghirdetés").btn.btn-primary
                 .col-sm-4 
                     span
