--- a/views/event_edit.pug
+++ b/views/event_edit.pug
@@ -19,6 +19,9 @@ block content
                     label(for="place") Az esemény helyszine:
                     input(type="text", name="place", placeholder="Az esemény helyszine", required="ture", value=event.place).form-control.mb-2
 
+                    label(for="date1") Az esemény dátuma:
+                    input(type="text", name="date1", placeholder="Az esemény dátuma", required="ture", value=event.date).form-control.mb-2
+
                     br
                     input(type="submit", name="submit" value="Módosítások mentése").btn.btn-primary
 
