--- a/views/part_event.pug
+++ b/views/part_event.pug
@@ -5,3 +5,5 @@ a(href=makeEventUrl(event), style="border-radius: 15px !important;").row.section
         p= stripEventName(event.text)
     .col-sm
         p.text-muted= event.place
+    .col-sm
+        p.text-muted= event.date1
