--- a/views/event.pug
+++ b/views/event.pug
@@ -23,6 +23,10 @@ block content
         p.event-desc= event.text
         br
 
+        br
+        p.event-desc= event.date1
+        br
+
         h2.fw-bold.mt-2.mb-3
             i.fas.fa-users.me-2
             | Résztvevők
