LMFAO Dátum kész

--- a/views/event.pug
+++ b/views/event.pug
@@ -23,8 +23,12 @@ block content
         p.event-desc= event.text
         br
 
+        h2.fw-bold.mt-2.mb-3
+            i.fas.fa-calendar.me-2
+            | Dátum
+        hr
         br
-        p.event-desc= event.date1
+        p.event-desc= event.event_date
         br
 
         h2.fw-bold.mt-2.mb-3
