--- a/views/part_event.pug
+++ b/views/part_event.pug
@@ -6,4 +6,4 @@ a(href=makeEventUrl(event), style="border-radius: 15px !important;").row.section
     .col-sm
         p.text-muted= event.place
     .col-sm
-        p.text-muted= event.date1
+        p.text-muted= event.event_date
