--- a/views/event_create.pug
+++ b/views/event_create.pug
@@ -25,8 +25,8 @@ block content
                     input(type="text", name="place", placeholder="Az esemény helyszine", required="ture", value="").form-control
 
                     br
-                    label(for="date1") Az esemény helyszine:
-                    input(type="text", name="date1", placeholder="Az esemény dátuma", required="ture", value="").form-control
+                    label(for="event_date") Az esemény dátuma:
+                    input(type="text", name="event_date", placeholder="Az esemény dátuma", required="ture", value="").form-control
 
                     br
                     input(type="submit", name="submit" value="Meghirdetés").btn.btn-primary
