DB 2.0: Event date

--- a/views/event_create.pug
+++ b/views/event_create.pug
@@ -26,7 +26,7 @@ block content
 
                     br
                     label(for="event_date") Az esemény dátuma:
-                    input(type="text", name="event_date", placeholder="Az esemény dátuma", required="ture", value="").form-control
+                    input(type="date", name="event_date", placeholder="Az esemény dátuma", required="ture", value="").form-control
 
                     br
                     input(type="submit", name="submit" value="Meghirdetés").btn.btn-primary
