--- a/views/part_comment.pug
+++ b/views/part_comment.pug
@@ -2,7 +2,8 @@ li.comment-body
     .row 
         .col-sm 
             a(href="/user/" + comment.user_id + "/s")= comment.user_name
+            
             p= comment.text
         //.col-sm-2
             - var d = new Date();
-            p=
+            p= LMFAO2
