--- a/views/part_post.pug
+++ b/views/part_post.pug
@@ -28,7 +28,7 @@
                 i.fas.fa-comments.me-2
                 | Kommentek
 
-    //if post.comments.length != 0
+    if posts.length != 0
         hr
         p 
             i.fas.fa-comments.me-2
