--- a/views/part_comment.pug
+++ b/views/part_comment.pug
@@ -4,11 +4,11 @@ li.comment-body
             //a(href="/user/" + comment.user_id + "/s")= comment.user_name
             a(href="/user/" + post.user_id + "/s")
                     img(src='/images/profiles/' + post.c_profile, alt='logo').avatarkep
-                    p.text-dark.fw-bold.inlineblock.ps-1= post.c_name
-        .col-sm
-            p= formatDate(post.c_date)        
-        hr
-        p= post.c_text
+                    p(style="font-size:14px").text-dark.fw-bold.inlineblock.ps-1= post.c_name
+        .col-sm-2
+            p(style="font-size:14px")= formatDate(post.c_date, true)        
+        hr(style="width:825px; color: rgb(170,170,170);")
+        p(style="font-size:14px")= post.c_text
         //.col-sm-2
             - var d = new Date();
             p= LMFAO2
