--- a/views/part_comment.pug
+++ b/views/part_comment.pug
@@ -1,6 +1,7 @@
 li.comment-body
     .row 
         .col-sm 
+            //p= post.event_id
             //a(href="/user/" + comment.user_id + "/s")= comment.user_name
             a(href="/user/" + post.user_id + "/s")
                     img(src='/images/profiles/' + post.c_profile, alt='logo').avatarkep
