--- a/views/part_post.pug
+++ b/views/part_post.pug
@@ -26,15 +26,23 @@
             a(href="/post/"+post.post_id+"/comments") 
                 i.fas.fa-comments.me-2
                 | Kommentek
+        - var opost = post;
+
         hr
         h5.fw-bold.mt-2.mb-3 
             i.fas.fa-comments.me-2
             | Kommentek
+
+        - var at_least_one = false;
         ul(style="list-style: none;")
             for post in comments
-                include part_comment
+                if post.c_text
+                    include part_comment
+                    - at_least_one = true;
+            if !at_least_one
+                i.text-muted.pb-2.pt-2.ps-2.pe-2.small Légy te az első aki kommentel!
 
-        form(method="POST", action="/comment/"+post.post_id+"/create")
+        form(method="POST", action="/comment/"+opost.post_id+"/create")
             .row.small.mt-1.ps-5.pe-5
                 .col-sm-10
                     input(type="text", name="text", placeholder="Ide írhatod a kommentedet").form-control
