--- a/views/event.pug
+++ b/views/event.pug
@@ -51,11 +51,12 @@ block content
                 | Kommentek
             if event.length != 1
                 ul(style="list-style: none;")
-                    for post in event
-                        - event_id = post.event_id
-                        include part_comment
+                    for post in event.slice(0, event.length-1)
+                        if post
+                            - event_id = post.event_id
+                            include part_comment
             else 
-                p Jelenleg még nincsenek kommentek!
+                i.text-muted.small Légy te az első aki kommentel!
             form(method="POST", action="/event/comment/"+ result_event[0].event_id +"/create") 
                     .row.small.mt-1.ps-5.pe-5
                         .col-sm-10
