--- a/views/part_comment.pug
+++ b/views/part_comment.pug
@@ -12,8 +12,7 @@ li.comment-body
                     .col-sm
                         p(style="font-size:14px")= formatDate(post.c_date, true)
                     .col-sm
-                        p= post.c_location
-                        form(action="/comment/"+post.c_id+"/delete/", method="POST")
+                        form(action="/comment/"+post.c_id+"/delete/" + post.c_location + "/", method="POST")
                             input(type="submit" value="x").btn.btn-sm.btn-danger
             else
                 p(style="font-size:14px")= formatDate(post.c_date, true)
