--- a/views/event.pug
+++ b/views/event.pug
@@ -8,21 +8,22 @@ block content
             .col-sm
                 h1.fw-bold
                     i.fas.fa-calendar.me-2
-                    span= event[0].event_name
+                    span= result_event[0].event_name
             .col-sm-2
                 if event.is_user_editor
-                    a.btn.btn-primary(href="/event/"+event[0].event_id+"/edit")
+                    a.btn.btn-primary(href="/event/"+result_event[0].event_id+"/edit")
                         i.fas.fa-edit.me-2
                         | Szerkesztés
                 else if event.is_user_attending
-                    a.btn.btn-outline-danger(href="/event/"+event[0].event_id+"/unattend") Részvétel törlése
+                    a.btn.btn-outline-danger(href="/event/"+result_event[0].event_id+"/unattend") Részvétel törlése
                 else if !event.is_user_attending
-                    a.btn.btn-primary(href="/event/"+event[0].event_id+"/attend") Részvétel jelzése!
+                    - console.log("EVENT: \n" + event.is_user_editor + "\n--------ATTEn: \n" + event.is_user_attending + "\n--------");
+                    a.btn.btn-primary(href="/event/"+result_event[0].event_id+"/attend") Részvétel jelzése!
 
         hr
 
         br
-        p= event[0].event_text
+        p= result_event[0].event_text
         br
 
         h2.fw-bold.mt-2.mb-3
@@ -30,7 +31,7 @@ block content
             | Dátum
         hr
         br
-        p.event-desc= event[0].event_date
+        p.event-desc= result_event[0].event_date
         br
 
         h2.fw-bold.mt-2.mb-3
@@ -44,15 +45,18 @@ block content
                 include part_user
         else 
             p(style="font-style: italic;").text-muted Légy te az első!
-        
+        //- console.log("EVENT_ID: \n" + result_event[0].event_id + "\nCOMMENT loc:\n" + result_event[0].c_location;
+        //- loc = result.event[0].c_location;
+        - event_id = event.event_id;
+        - loc = event.c_location;
         hr
-        if event.is_user_editor == 1 || event.is_user_attending != 0
+        if result_event[0].is_user_editor == 1 || result_event[0].is_user_attending != 0
             h2.fw-bold.mt-2.mb-3
                 i.fas.fa-comments.me-2
                 | Kommentek
             if event.length != 1
                 ul(style="list-style: none;")
-                    for post in event.slice(0, event.length-1)
+                    for post in event 
                         if post
                             - event_id = post.event_id
                             - loc = post.c_location
