--- a/views/part_post.pug
+++ b/views/part_post.pug
@@ -43,7 +43,7 @@
             if !at_least_one
                 i.text-muted.pb-2.pt-2.ps-2.pe-2.small Légy te az első aki kommentel!
 
-        form(method="POST", action="/comment/"+opost.post_id+"/create/" + opost.c_location + "/")
+        form(method="POST", action="/comment/"+opost.post_id+"/create/post/")
             .row.small.mt-1.ps-5.pe-5
                 .col-sm-10
                     input(type="text", name="text", placeholder="Ide írhatod a kommentedet").form-control
