--- a/public/css/index.css
+++ b/public/css/index.css
@@ -75,7 +75,7 @@ body {
 }
 
 .post-card {
-    background-color: #f9fffe;
+    background-color: rgb(250, 250, 252);
     padding: 30px;
     box-shadow: 0px 0px 20px rgb(33, 33, 33, 0.1);
 }
