--- a/views/layout.pug
+++ b/views/layout.pug
@@ -85,6 +85,37 @@ html(lang='hu')
         -  return desc.substring(0, 15) + "...";  
         - }
 
+        - function getMonth_HU(m) {
+        -    if (d==0) return "január";
+        -    if (d==1) return "február";
+        -    if (d==2) return "március";
+        -    if (d==3) return "április";
+        -    if (d==4) return "május";
+        -    if (d==5) return "június";
+        -    if (d==6) return "július";
+        -    if (d==7) return "augusztus";
+        -    if (d==8) return "szeptember";
+        -    if (d==9) return "október";
+        -    if (d==10) return "november";
+        -    return "december";
+        - }
+
+        - function getClock(dateObj) {
+        -   let hour = new String(dateObj.getHours());
+        -   let minute = new String(dateObj.getMinutes());
+        -   if (hour.length==1) hour = "0" + hour;
+        -   if (minute.length==1) minute = "0" + minute;
+        -   return hour + ":" + minute;
+        - }
+        
+        - function niceDate(d) {
+        -   let dateObj = new Date(d);
+        -   let month = getMonth_HU(dateObj.getMonth());
+        -   let day = dateObj.getDate()+1;
+        -   let year = dateObj.getFullYear();
+        -   return new String(year) + " " + new String(month) + " " + new String(day) + ". - " + getClock(dateObj);
+        - }
+
         nav.navbar.navbar-expand-lg.navbar-default
             ul.navbar-nav.ms-5
                 a.ms-4.navbar-brand.nav-link(href='/', title='Celebrate Together', alt='Celebrate Together')
