--- a/views/event_edit.pug
+++ b/views/event_edit.pug
@@ -20,7 +20,7 @@ block content
                     input(type="text", name="place", placeholder="Az esemény helyszine", required="ture", value=event.place).form-control.mb-2
 
                     label(for="event_date") Az esemény dátuma:
-                    input(type="text", name="event_date", placeholder="Az esemény dátuma", required="ture", value=event.date).form-control.mb-2
+                    input(type="date", name="event_date", placeholder="Az esemény dátuma", required="ture", value=event.event_date).form-control.mb-2
 
                     br
                     input(type="submit", name="submit" value="Módosítások mentése").btn.btn-primary
